# cpp-trailers

./: .gitignore  CMakeLists.txt  README.md  notes.md
app-netz/: CMakeLists.txt  app_runner.cpp  netz.cpp  netz.h  notes.md  user.cpp  user.h
cpp-cmake-test/: CMakelists.txt  ToDo.h  main.cpp
cpp-cmake-test/ToDoCore/: ToDo.cpp
cpp-cmake-test/ToDoCore/unit_test/: CMakeLists.txt  ToDoTest.cpp
cpp-cmake-test/cmake/Modules/: gmock.cmake
cpp-multithread-app/: CMakelists.txt  main.cpp
cpp-multithread-app/callbacktimer/: CMakelists.txt  callback_timer.cpp  callback_timer.h
cpp-multithread-app/randomnumgen/: CMakelists.txt  random_number_generator.cpp  random_number_generator.h
practice/: .gitignore  CMakeCache.txt  CMakelists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
practice/Docs/: todo.md
practice/STL_Algorithms/: CMakeLists.txt  CTestTestfile.cmake  Makefile  algo_1.cpp  algo_2.cpp  algo_3.cpp  algo_4.cpp  cmake_install.cmake
practice/STL_Containers/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  container.cpp  list_1.cpp  set_1.cpp  vector_1.cpp  vector_2.cpp
practice/STL_Containers/list_q/: CMakelists.txt  list_1.cpp  list_2.cpp
practice/STL_Containers/map_q/: CMakelists.txt  map_1.cpp  map_2.cpp  map_3.cpp
practice/STL_Containers/set_q/: CMakelists.txt  set_1.cpp  set_2.cpp  set_3.cpp
practice/STL_Iterators/: CMakeLists.txt  iterator_1.cpp
puzzles/: ooad_moviebooking.cpp  ooad_parkinglot.cpp
temp/app/: CMakeLists.txt  tester.cpp
temp/archive/: CMakeLists.txt  CMakeLists_version_2.txt  tester.cpp  tips_cmake.md
temp/archive/components/: CMakelists.txt  netz.cpp  netz.h  user.cpp  user.h
temp/archive/utils/: CMakelists.txt  uuid_generator.cpp
(+4 files in other folders)
